--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
 </header>
 
-	
+	<audio id="bgmMusic" src="oycq.mp3" preload="auto" type="audio/mp3" autoplay="" loop=""></audio>
     <!-- Navigation -->
 <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container-fluid">
